examples/test/testpolicy3725.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3725
  namespace: namespace423
spec:
  podSelector:
    matchLabels:
      key36: value8
      key3: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value16
          key30: value49
          key38: value5
      podSelector:
        matchLabels:
          key32: value19
          key22: value22
